infrastructure/sealed-secrets/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sealed-secrets
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  labels:
    app.kubernetes.io/name: sealed-secrets
    pod-security.kubernetes.io/enforce: restricted
